# cmd/server/handler/appointments/appointments.go
@@ -26,6 +26,18 @@ func NewControllerAppointment(service appointments.ServiceAppointments,) *Contro
 	}
 }
 
+// godoc Appointments
+// HandlerCreate crea una nueva cita.
+// @Summary Crear cita
+// @Description Crea una nueva cita.
+// @Tags appointments
+// @Accept json
+// @Produce json
+// Param request body domain.AppointmentRequest true "Información de la cita a crear"
+// @Success 200 {object} web.Response
+// @Failure 400 {object} web.ErrorResponse
+// @Failure 500 {object} web.ErrorResponse
+// @Router /appointments [post]
 func (c *Controller) HandlerCreate() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 
@@ -49,6 +61,16 @@ func (c *Controller) HandlerCreate() gin.HandlerFunc {
 	}
 }
 
+// godoc Appointments
+// HandlerGetAll obtiene todas las citas.
+// @Summary Obtener todas las citas
+// @Description Obtiene todas las citas.
+// @Tags appointments
+// @Accept json
+// @Produce json
+// @Success 200 {object} web.Response
+// @Failure 500 {object} web.ErrorResponse
+// @Router /appointments [get]
 func (c *Controller) HandlerGetAll() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		appointments, err := c.service.GetAll(ctx)
@@ -63,16 +85,18 @@ func (c *Controller) HandlerGetAll() gin.HandlerFunc {
 }
 
 /* --------------------------------- GET BY ID ------------------------------- */
-// Appointment godoc
-// @Summary appointment example
-// @Description Get appointment by id
-// @Tags appointment
-// @Param id path int true "id del appointment"
+// godoc Appointments
+// HandlerGetByID obtiene una cita por su ID.
+// @Summary Obtener cita por ID
+// @Description Obtiene una cita por su ID.
+// @Tags appointments
+// @Param id path int true "ID de la cita"
 // @Accept json
 // @Produce json
-// @Success 200 {object} web.response
-// @Failure 400 {object} web.errorResponse
-// @Failure 500 {object} web.errorResponse
+// @Success 200 {object} web.Response
+// @Failure 400 {object} web.ErrorResponse
+// @Failure 404 {object} web.ErrorResponse
+// @Failure 500 {object} web.ErrorResponse
 // @Router /appointments/{id} [get]
 func (c *Controller) HandlerGetByID() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
@@ -93,15 +117,20 @@ func (c *Controller) HandlerGetByID() gin.HandlerFunc {
 	}
 }
 
-// Appointment godoc
-// @Summary Update appointment by ID
-// @Tags appointment
+// godoc Appointments
+// HandlerUpdate actualiza una cita por su ID.
+// @Summary Actualizar cita por ID
+// @Description Actualiza una cita por su ID.
+// @Tags appointments
+// @Param id path int true "ID de la cita"
 // @Accept json
 // @Produce json
-// @Success 200 {object} web.response
-// @Failure 400 {object} web.errorResponse
-// @Failure 500 {object} web.errorResponse
-// @Router /appointments/:id [put]
+// Param request body domain.AppointmentRequest true "Información de la cita a actualizar"
+// @Success 200 {object} web.Response
+// @Failure 400 {object} web.ErrorResponse
+// @Failure 404 {object} web.ErrorResponse
+// @Failure 500 {object} web.ErrorResponse
+// @Router /appointments/{id} [put]
 func (c *Controller) HandlerUpdate() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		// ... (manejo de errores, validaciones, etc.)
@@ -138,17 +167,19 @@ func (c *Controller) HandlerUpdate() gin.HandlerFunc {
 
 
 /* --------------------------------- DELETE ------------------------------- */
-// Appointment godoc
-// @Summary appointment example
-// @Description Delete appointment by id
-// @Tags appointment
-// @Param id path int true "id del appointment"
+// godoc Appointments
+// HandlerDelete elimina una cita por su ID.
+// @Summary Eliminar cita por ID
+// @Description Elimina una cita por su ID.
+// @Tags appointments
+// @Param id path int true "ID de la cita"
 // @Accept json
 // @Produce json
-// @Success 200 {object} web.response
-// @Failure 400 {object} web.errorResponse
-// @Failure 500 {object} web.errorResponse
-// @Router /appointment/:id [delete]
+// @Success 200 {object} web.Response
+// @Failure 400 {object} web.ErrorResponse
+// @Failure 404 {object} web.ErrorResponse
+// @Failure 500 {object} web.ErrorResponse
+// @Router /appointments/{id} [delete]
 func (c *Controller) HandlerDelete() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id, err := strconv.Atoi(ctx.Param("id"))
@@ -176,17 +207,20 @@ func (c *Controller) HandlerDelete() gin.HandlerFunc {
 }
 
 /* --------------------------------- PATCH ------------------------------- */
-// Appointment godoc
-// @Summary appointment example
-// @Description Patch appointment by id
-// @Tags appointment
-// @Param id path int true "id del appointment"
+// godoc Appointments
+// HandlerPatch aplica un parche a una cita por su ID.
+// @Summary Aplicar parche a cita por ID
+// @Description Aplica un parche a una cita por su ID.
+// @Tags appointments
+// @Param id path int true "ID de la cita"
 // @Accept json
 // @Produce json
-// @Success 200 {object} web.response
-// @Failure 400 {object} web.errorResponse
-// @Failure 500 {object} web.errorResponse
-// @Router /appointment/:id [patch]
+// @Param request body domain.AppointmentPatchRequest true "Parche a aplicar a la cita"
+// @Success 200 {object} web.Response
+// @Failure 400 {object} web.ErrorResponse
+// @Failure 404 {object} web.ErrorResponse
+// @Failure 500 {object} web.ErrorResponse
+// @Router /appointments/{id} [patch]
 func (c *Controller) HandlerPatch() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		// ... (manejo de errores, validaciones, etc.)
